# agentbridge

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
aidlc/spaces/default/intents/260626-hook-text-relay/audit/: 603e5f4a8072-bed60565ff89.md
docs/superpowers/specs/: 2026-06-27-transcript-thinking-relay-design.md
src/: hook_receiver.rs  hook_route.rs  transcript.rs
src/agent/: mod.rs
src/agent/tmux/: session.rs
src/core/: mod.rs  platform.rs  session.rs  text_format.rs
src/engine/: commands.rs  events.rs  mod.rs
