[package]
name = "agentbridge"
version = "0.1.0"
edition = "2021"
description = "Bridge Claude Code to your favorite chat apps. Control your AI agent from anywhere."
license = "MIT"
keywords = ["claude-code", "ai-agent", "telegram", "discord", "bridge"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
dirs = "6"
cron = "0.15"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "cors", "limit"] }
futures-util = "0.3"
hostname = "0.4"
rusqlite = { version = "0.34", features = ["bundled"] }
tracing-appender = "0.2"
feishu-sdk = { version = "0.1.2", features = ["websocket"] }

[dev-dependencies]
tempfile = "3"
